# hiredis-vip-cmake

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: hiredis.c  hiredis.h  rediscluster.c
